[project]
name = "lm-memory-recall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "jupytext>=1.16.4",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "ruff>=0.8.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]
